tests/baselines/reference/unicodeExtendedEscapesInRegularExpressions19(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
unicodeExtendedEscapesInRegularExpressions19.ts(1,13): error TS1125: Hexadecimal digit expected.
unicodeExtendedEscapesInRegularExpressions19.ts(1,16): error TS1501: This regular expression flag is only available when targeting 'es6' or later.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== unicodeExtendedEscapesInRegularExpressions19.ts (2 errors) ====
    var x = /\u{}/gu;
                
!!! error TS1125: Hexadecimal digit expected.
                   ~
!!! error TS1501: This regular expression flag is only available when targeting 'es6' or later.
    